@@ -1,3 +1,11 @@
+2006-12-21  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
+
+	* mail/em-format-html-display.c: (efhd_image_unallocate),
+	(efhd_attachment_image):
+	
+	Disconnect handlers on image destroy. Fixes bug
+	#340165.
+
 2006-12-18  Veerapuram Varadhan  <vvaradhan@novell.com>
 
 	* NEWS, configure.in: Evolution 2.9.4 release
